# flappyBird

./: CMakeLists.txt
src/: Game.cpp
src/engine/: Geometry.cpp  Geometry.h
src/engine/components/: BoxCollider.cpp  BoxCollider.h  Component.cpp  Component.h  Drawable.h  FlappyBirdPlayer.cpp  FlappyBirdPlayer.h  Rectangle.cpp  Rectangle.h  Rigidbody2D.cpp  Rigidbody2D.h  UIDrawable.h  UIRectangle.cpp  UIRectangle.h
src/engine/entities/: ColumnFactory.cpp  ColumnFactory.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h
src/utils/: AbstractFactory.h  Singleton.h
